/*buildscript {
    dependencies {
        classpath files('libs/gradle/run-paper.jar')
    }
}*/

plugins {
    id 'java'
    id 'application'
    id 'maven-publish'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.21' // Enable Development of using Mojang Mapping.
    id 'xyz.jpenilla.run-paper' version '+' // Run Mojang Mapped or Spigot Mapped Server
    id 'com.gradleup.shadow' version '9.4.1' // fatJar
    id "com.diffplug.spotless" version "8.4.0" // Add License Header to source code headers.
    id "de.undercouch.download" version "+" // File Downloader
    id 'com.palantir.git-version' version '+' // Git Information Getter
    id "org.jetbrains.gradle.plugin.idea-ext" version "1.0.1" // IntelliJ IDEA Plugin
}

//apply plugin: xyz.jpenilla.runpaper.RunPaper

group 'net.unknown'
version versionDetails().gitHash[0..7]
def styledVersion = "git-" + project.name + "-" + (versionDetails().branchName != null ? versionDetails().branchName : System.getenv("BRANCH_NAME")) + "-" + versionDetails().gitHash[0..7];

compileJava.dependsOn = ["spotlessApply"]
compileJava.options.encoding = "UTF-8"
javadoc.options.encoding = "UTF-8"
processResources.filteringCharset = "UTF-8"

java.sourceCompatibility = JavaVersion.VERSION_25
java.targetCompatibility = JavaVersion.VERSION_25
compileJava.options.release.set(25)

configurations {
    launchwrapper
}

spotless {
    java {
        licenseHeaderFile 'src/main/java/net/unknown/HEADER.txt'
        target 'src/main/java/net/unknown/**/*.java'
    }
}

repositories {
    mavenCentral()
    maven { url = "https://repo.papermc.io/repository/maven-public/" } // Paper, Velocity
    maven { url = "https://repo.spongepowered.org/maven/" }
    maven { url = "https://files.minecraftforge.net/maven/" }
    maven { url = "https://maven.quiltmc.org/repository/release/" }
    maven { url = "https://maven.enginehub.org/repo/" }
    maven { url = "https://repo.codemc.io/" } // VaultAPI
    maven { url = "https://repo.ryuuta0217.com/repository/unknown-network/" }
    maven { url = "https://repo.onarandombox.com/content/groups/public/" } // Multiverse-(Core|Inventories|Portals|NetherPortals) repo
    maven { url = "https://maven.playpro.com/" } // CoreProtect
    maven { url = "https://repo.viaversion.com" } // ViaVersion
}

dependencies {
    paperweight.paperDevBundle("26.2.build.+")
    compileOnly fileTree(dir: "libs", include: "*.jar")
    compileOnly group: 'com.sk89q.worldguard', name: 'worldguard-bukkit', version: '7.0.16', {
        exclude group: 'com.google.code.gson', module: 'gson'
        exclude group: 'com.google.guava', module: 'guava'
        exclude group: 'it.unimi.dsi', module: 'fastutil'
    }
    compileOnly group: 'net.milkbowl.vault', name: 'VaultAPI', version: '1.7'
    compileOnly group: 'net.luckperms', name: 'api', version: '+'
    compileOnly group: 'net.unknown', name: 'UnknownNetworkBootstrap', version: 'd81767d8'
    launchwrapper group: 'net.unknown', name: 'UnknownNetworkBootstrap', version: 'd81767d8'
    implementation group: 'org.mozilla', name: 'rhino', version: '1.7.15'
    implementation group: 'net.dv8tion', name: 'JDA', version: '+'
    implementation group: 'org.json', name: 'json', version: '+'
    compileOnly group: 'org.mvplugins.multiverse.core', name: 'multiverse-core', version: '+'
//    compileOnly group: 'com.onarandombox.multiversecore', name: 'Multiverse-Core', version: '+'
    compileOnly group: 'org.mvplugins.multiverse.inventories', name: 'multiverse-inventories', version: '+'
    compileOnly group: 'net.coreprotect', name: 'coreprotect', version: '+'
    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.25.0'
    implementation group: 'com.github.luben', name: 'zstd-jni', version: '+'
    //implementation group: 'io.netty', name: 'netty-buffer', version: '4.1.52.Final'
    //implementation group: 'io.netty', name: 'netty-handler', version: '4.1.52.Final'
    compileOnly group: 'com.velocitypowered', name: 'velocity-api', version: '4.+'
    annotationProcessor group: 'com.velocitypowered', name: 'velocity-api', version: '+'
    implementation group: 'io.ipinfo', name: 'ipinfo-api', version: '+'
    compileOnly group: "com.viaversion", name: "viaversion-api", version: "+"
}

def generateTemplates = tasks.register("generateTemplates", Copy) { task ->
    def props = [
        'version': styledVersion
    ]

    task.inputs.properties props

    task.from file('src/main/templates')
    task.into layout.buildDirectory.dir('generated/sources/templates')
    task.expand props
}

sourceSets.main.java.srcDir(generateTemplates.map { it.outputs })

rootProject.idea.project.settings.taskTriggers.afterSync generateTemplates

import org.apache.tools.ant.filters.ReplaceTokens

processResources {
    filesMatching("*.yml") {
        duplicatesStrategy(DuplicatesStrategy.INCLUDE)
        filter ReplaceTokens, tokens: [version: styledVersion]
    }

    filesMatching("*.json") {
        duplicatesStrategy(DuplicatesStrategy.INCLUDE)
        filter ReplaceTokens, tokens: [version: styledVersion]
    }
}

application {
    mainClass = 'net.unknown.UnknownNetworkCore'
}

jar {
    archiveFileName = "original-" + archiveBaseName.get() + "." + archiveExtension.get()
    manifest {
        attributes 'Version': styledVersion
    }
}

shadowJar {
    archiveFileName = archiveBaseName.get() + "." + archiveExtension.get()
}

runServer {
    runDirectory.set(project.file("testServer"))
    systemProperty "net.kyori.adventure.text.warnWhenLegacyFormattingDetected", "false" // default is false, but run-paper is set this option force true.
    systemProperty "Paper.ignoreWorldDataVersion", "true"
    systemProperty "un.env", System.getProperty("un.env", "SURVIVAL")
    systemProperty "file.encoding", System.getProperty("file.encoding", "UTF-8")
    systemProperty "sun.stdout.encoding", System.getProperty("sun.stdout.encoding", "UTF-8")
    systemProperty "sun.stderr.encoding", System.getProperty("sun.stderr.encoding", "UTF-8")
    if (System.getProperty("spm", "false").equals("true")) { // for Single Plugin Mode Support
        args("-Pplugins_SPM")
    }
}

runDevBundleServer {
    runDirectory.set(project.file("testServer"))
    systemProperty "net.kyori.adventure.text.warnWhenLegacyFormattingDetected", "false" // default is false, but run-paper is set this option force true.
    systemProperty "Paper.ignoreWorldDataVersion", "true"
    systemProperty "un.env", System.getProperty("un.env", "SURVIVAL")
    systemProperty "file.encoding", System.getProperty("file.encoding", "UTF-8")
    systemProperty "sun.stdout.encoding", System.getProperty("sun.stdout.encoding", "UTF-8")
    systemProperty "sun.stderr.encoding", System.getProperty("sun.stderr.encoding", "UTF-8")
    if (System.getProperty("spm", "false").equals("true")) { // for Single Plugin Mode Support
        args("-Pplugins_SPM")
    }
}

task runWrappedServer(type: JavaExec, dependsOn: shadowJar) {
    classpath(configurations.launchwrapper)
    args("--nogui", "--add-plugin=../build/libs/UnknownNetworkCore.jar")
    workingDir(project.file("testServer"))
    systemProperty "UnknownNetworkMagic", "bundle"
    systemProperty "un.env", System.getProperty("un.env", "SURVIVAL")
    systemProperty "file.encoding", System.getProperty("file.encoding", "UTF-8")
    systemProperty "sun.stdout.encoding", System.getProperty("sun.stdout.encoding", "UTF-8")
    systemProperty "sun.stderr.encoding", System.getProperty("sun.stderr.encoding", "UTF-8")
    if (System.getProperty("spm", "false").equals("true")) { // for Single Plugin Mode Support
        args("-Pplugins_SPM")
    }
}

task copyArtifactToProxy(type: Copy) {
    from project.file("build/libs/UnknownNetworkCore.jar")
    into project.file("testProxy/plugins")
}

copyArtifactToProxy.dependsOn(shadowJar)
publish.dependsOn(shadowJar)

artifacts {
    jar
    //sourceJar
    //javaDocJar
    shadowJar
}

publishing {
    publications {
        release(MavenPublication) {
            groupId = 'net.unknown'
            artifactId = project.name
            version = version

            artifact(shadowJar) {
                classifier = null
            }

            pom {
                name = project.name
                description = "Unknown Network Core plugin"
                url = "https://www.mc-unknown.net/"
                inceptionYear = "2023"

                licenses {
                    license {
                        name = "All rights reserved"
                    }
                }

                developers {
                    developer {
                        id = "ryuuta0217"
                        name = "Ryuta Iwakura"
                        email = "ryuuta.iwakura@gmail.com"
                    }
                }
            }
        }
    }

    repositories {
        maven {
            url 'https://repo.ryuuta0217.com/repository/unknown-network/'
            credentials {
                username = System.getenv("NEXUS_USERNAME")
                password = System.getenv("NEXUS_PASSWORD")
            }
        }
    }

    publishReleasePublicationToMavenRepository {
        dependsOn shadowJar
    }
}